# altman

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resource.rc  ui.cpp  ui.h  vcpkg.json  version.h
.github/workflows/: release.yml
components/: components.h  data.cpp  data.h  menu.cpp
components/accounts/: accounts_context_menu.cpp  accounts_context_menu.h  accounts_join_ui.cpp  accounts_join_ui.h  accounts_tab.cpp
components/console/: console.h  console_tab.cpp
components/friends/: friends_actions.cpp  friends_actions.h  friends_tab.cpp
components/games/: games_tab.cpp  games_utils.cpp  games_utils.h
components/history/: history_tab.cpp  history_utils.cpp  history_utils.h  log_parser.cpp  log_parser.h  log_types.h
components/servers/: servers.h  servers_tab.cpp  servers_utils.cpp  servers_utils.h
components/settings/: settings.h  settings_tab.cpp
src/: main.cpp  resource.rc  ui.cpp  ui.h  version.h
src/components/: backup.cpp  backup.h  data.cpp  data.h  menu.cpp
src/components/accounts/: accounts.h  accounts_context_menu.cpp  accounts_join_ui.cpp  accounts_join_ui.h  accounts_tab.cpp
src/components/avatar/: inventory.h  inventory_tab.cpp
src/components/console/: console_tab.cpp
src/components/friends/: friends.h  friends_actions.cpp  friends_actions.h  friends_tab.cpp
src/components/games/: games.h  games_tab.cpp  games_utils.cpp
src/components/history/: history.h  history_tab.cpp  history_utils.cpp  log_parser.h
src/components/servers/: servers.h  servers_tab.cpp  servers_utils.h
src/components/settings/: settings_tab.cpp
src/utils/core/: stb_image.h  time_utils.h
src/utils/network/: roblox.h
src/utils/network/roblox/: auth.h  common.h  games.h  session.h  social.h
src/utils/system/: launcher.hpp  main_thread.h  multi_instance.h  roblox_control.h  threading.h  update.h
src/utils/ui/: image.h  modal_popup.h  webview.hpp
utils/: app_state.h  base64.h  confirm.h  http.hpp  launcher.hpp  logging.hpp  main_thread.h  modal_popup.h  notifications.h  roblox_api.h  status.h  threading.h  time_utils.h  update.h  webview.hpp
utils/core/: base64.h  logging.hpp  status.h  time_utils.h
utils/network/: http.hpp  roblox.h  roblox_api.h
utils/network/roblox/: auth.h  games.h  session.h
utils/system/: launcher.hpp  main_thread.h  update.h
utils/ui/: confirm.h  notifications.h  webview.hpp
